--- a/pokemontracker/pokemontrackerstyle.css
+++ b/pokemontracker/pokemontrackerstyle.css
@@ -25,6 +25,7 @@ select, button {
     gap: 10px;
     max-width: 800px;
     margin: auto;
+    height: 535px;
 }
 
 .pokemon {
@@ -34,6 +35,8 @@ select, button {
     text-align: center;
     cursor: pointer;
     user-select: none;
+    width: 125px;
+    height: 75px;
 }
 
 .pokemon.caught {
